* Modify the protocol.conf file

--- a/cryosparc2/protocols.conf
+++ b/cryosparc2/protocols.conf
@@ -23,11 +23,13 @@ Protocols SPA = [
 			{"tag": "section", "text": "more", "openItem": "False", "children": []}
 		]},
 		{"tag": "protocol_group", "text": "Classify", "openItem": "False", "children": [
+		    {"tag": "protocol", "value": "ProtCryo2D",   "text": "default"},
 			{"tag": "section", "text": "more", "openItem": "False", "children": []}
 		]}
 	]},
 	{"tag": "section", "text": "3D", "children": [
 		{"tag": "protocol_group", "text": "Initial volume", "openItem": "False", "children": [
+		    {"tag": "protocol", "value": "ProtCryoSparcInitialModel",  "text": "default"},
 			{"tag": "section", "text": "more", "openItem": "False", "children": []}
 		]},
 		{"tag": "protocol_group", "text": "Preprocess", "openItem": "False", "children": [
@@ -35,6 +37,7 @@ Protocols SPA = [
 		]},
 		{"tag": "protocol_group", "text": "Classify", "openItem": "False", "children": []},
 		{"tag": "protocol_group", "text": "Refine", "openItem": "False", "children": [
+		    {"tag": "protocol", "value": "ProtCryoSparcRefine3D",   "text": "default"},
 			{"tag": "section", "text": "more", "openItem": "False", "children": []}
 		]},
 		{"tag": "protocol_group", "text": "Analysis", "openItem": "False", "children": [
