--- a/cryosparc2/protocols.conf
+++ b/cryosparc2/protocols.conf
@@ -30,6 +30,7 @@ Protocols SPA = [
 	{"tag": "section", "text": "3D", "children": [
 		{"tag": "protocol_group", "text": "Initial volume", "openItem": "False", "children": [
 		    {"tag": "protocol", "value": "ProtCryoSparcInitialModel",  "text": "default"},
+		    {"tag": "protocol", "value": "ProtCryoSparcNonUniformRefine3D",  "text": "default"},
 			{"tag": "section", "text": "more", "openItem": "False", "children": []}
 		]},
 		{"tag": "protocol_group", "text": "Preprocess", "openItem": "False", "children": [
