--- a/cryosparc2/protocols.conf
+++ b/cryosparc2/protocols.conf
@@ -39,7 +39,9 @@ Protocols SPA = [
 		{"tag": "protocol_group", "text": "Refine", "openItem": "False", "children": [
 		    {"tag": "protocol", "value": "ProtCryoSparcRefine3D",   "text": "default"},
 		    {"tag": "protocol", "value": "ProtCryoSparcNonUniformRefine3D",  "text": "default"},
-			{"tag": "section", "text": "more", "openItem": "False", "children": []}
+			{"tag": "section", "text": "more", "openItem": "False", "children": [
+			    {"tag": "protocol", "value": "ProtCryoSparcSubtract",  "text": "default"}
+			    ]}
 		]},
 		{"tag": "protocol_group", "text": "Analysis", "openItem": "False", "children": [
 			{"tag": "section", "text": "Heterogeneity", "openItem": "False", "children": []},
