* Add the local refinement protocol * Add the input mask into the protocol summary * Add the local refine protocol in the protocol.conf file

--- a/cryosparc2/protocols.conf
+++ b/cryosparc2/protocols.conf
@@ -40,7 +40,8 @@ Protocols SPA = [
 		    {"tag": "protocol", "value": "ProtCryoSparcRefine3D",   "text": "default"},
 		    {"tag": "protocol", "value": "ProtCryoSparcNonUniformRefine3D",  "text": "default"},
 			{"tag": "section", "text": "more", "openItem": "False", "children": [
-			    {"tag": "protocol", "value": "ProtCryoSparcSubtract",  "text": "default"}
+			    {"tag": "protocol", "value": "ProtCryoSparcSubtract",  "text": "default"},
+			    {"tag": "protocol", "value": "ProtCryoSparcLocalRefine",  "text": "default"}
 			    ]}
 		]},
 		{"tag": "protocol_group", "text": "Analysis", "openItem": "False", "children": [
