--- a/cryosparc2/protocols.conf
+++ b/cryosparc2/protocols.conf
@@ -35,7 +35,9 @@ Protocols SPA = [
 		{"tag": "protocol_group", "text": "Preprocess", "openItem": "False", "children": [
 			{"tag": "section", "text": "more", "openItem": "False", "children": []}
 		]},
-		{"tag": "protocol_group", "text": "Classify", "openItem": "False", "children": []},
+		{"tag": "protocol_group", "text": "Classify", "openItem": "False", "children": [
+		    {"tag": "protocol", "value": "ProtCryoSparc3DClassification",  "text": "default"}
+		]},
 		{"tag": "protocol_group", "text": "Refine", "openItem": "False", "children": [
 		    {"tag": "protocol", "value": "ProtCryoSparcRefine3D",   "text": "default"},
 		    {"tag": "protocol", "value": "ProtCryoSparcNonUniformRefine3D",  "text": "default"},
