--- a/cryosparc2/protocols.conf
+++ b/cryosparc2/protocols.conf
@@ -40,12 +40,16 @@ Protocols SPA = [
 		]},
 		{"tag": "protocol_group", "text": "Refine", "openItem": "False", "children": [
 		    {"tag": "protocol", "value": "ProtCryoSparcRefine3D",   "text": "default"},
+		    {"tag": "protocol", "value": "ProtCryoSparc3DHomogeneousRefine",   "text": "default"},
 		    {"tag": "protocol", "value": "ProtCryoSparcNonUniformRefine3D",  "text": "default"},
+		    {"tag": "protocol", "value": "ProtCryoSparcNewNonUniformRefine3D",  "text": "default"},
 		    {"tag": "protocol", "value": "ProtCryoSparcLocalCtfRefinement",   "text": "default"},
 		    {"tag": "protocol", "value": "ProtCryoSparcGlobalCtfRefinement",  "text": "default"},
 			{"tag": "section", "text": "more", "openItem": "False", "children": [
 			    {"tag": "protocol", "value": "ProtCryoSparcSubtract",  "text": "default"},
-			    {"tag": "protocol", "value": "ProtCryoSparcLocalRefine",  "text": "default"}
+			    {"tag": "protocol", "value": "ProtCryoSparcLocalRefine",  "text": "default"},
+			    {"tag": "protocol", "value": "ProtCryoSparcNaiveLocalRefine",  "text": "default"},
+			    {"tag": "protocol", "value": "ProtCryoSparcHelicalRefine3D",  "text": "default"}
 			    ]}
 		]},
 		{"tag": "protocol_group", "text": "Analysis", "openItem": "False", "children": [
