* Big refactorization   - Moving common protocols methods to protocol_base   - Creating the FSC using the system information   - Removing the use of process to copy or move some output files   - Using of str format to create the some strings   - Removing an unused protocols parameters   - Fixing cryosparc volumes to read correctly   - Adding some parameters into protocol_cryosparc_part_subtract   - Checking other parameters in the tests

--- a/cryosparc2/protocols.conf
+++ b/cryosparc2/protocols.conf
@@ -20,7 +20,8 @@ Protocols SPA = [
 	]},
 	{"tag": "section", "text": "2D", "children": [
 		{"tag": "protocol_group", "text": "Align", "openItem": "False", "children": [	
-			{"tag": "section", "text": "more", "openItem": "False", "children": []}
+			{"tag": "section", "text": "more", "openItem": "False", "children": [
+			{"tag": "protocol", "value": "ProtCryoSparcSymmetryExpansion",  "text": "default"}]}
 		]},
 		{"tag": "protocol_group", "text": "Classify", "openItem": "False", "children": [
 		    {"tag": "protocol", "value": "ProtCryo2D",   "text": "default"},
@@ -46,7 +47,6 @@ Protocols SPA = [
 		    {"tag": "protocol", "value": "ProtCryoSparcLocalCtfRefinement",   "text": "default"},
 		    {"tag": "protocol", "value": "ProtCryoSparcGlobalCtfRefinement",  "text": "default"},
 			{"tag": "section", "text": "more", "openItem": "False", "children": [
-			    {"tag": "protocol", "value": "ProtCryoSparcSubtract",  "text": "default"},
 			    {"tag": "protocol", "value": "ProtCryoSparcLocalRefine",  "text": "default"},
 			    {"tag": "protocol", "value": "ProtCryoSparcNaiveLocalRefine",  "text": "default"},
 			    {"tag": "protocol", "value": "ProtCryoSparcHelicalRefine3D",  "text": "default"}
@@ -56,7 +56,8 @@ Protocols SPA = [
 			{"tag": "section", "text": "Heterogeneity", "openItem": "False", "children": []},
 			{"tag": "section", "text": "Validation", "openItem": "False", "children": []},
 			{"tag": "section", "text": "Resolution", "openItem": "False", "children": []},
-			{"tag": "section", "text": "more", "openItem": "False", "children": []}
+			{"tag": "section", "text": "more", "openItem": "False", "children": [
+			 {"tag": "protocol", "value": "ProtCryoSparcSubtract",  "text": "default"}]}
 		]},
 		{"tag": "protocol_group", "text": "Reconstruct", "openItem": "False", "children": []}
 	]},
