--- a/cryosparc2/protocols.conf
+++ b/cryosparc2/protocols.conf
@@ -37,13 +37,14 @@ Protocols SPA = [
 			{"tag": "section", "text": "more", "openItem": "False", "children": []}
 		]},
 		{"tag": "protocol_group", "text": "Classify", "openItem": "False", "children": [
-		    {"tag": "protocol", "value": "ProtCryoSparc3DClassification",  "text": "default"}
+		    {"tag": "protocol", "value": "ProtCryoSparcNew3DClassification",  "text": "default"}
 		]},
 		{"tag": "protocol_group", "text": "Refine", "openItem": "False", "children": [
 		    {"tag": "protocol", "value": "ProtCryoSparcRefine3D",   "text": "default"},
 		    {"tag": "protocol", "value": "ProtCryoSparc3DHomogeneousRefine",   "text": "default"},
 		    {"tag": "protocol", "value": "ProtCryoSparcNonUniformRefine3D",  "text": "default"},
 		    {"tag": "protocol", "value": "ProtCryoSparcNewNonUniformRefine3D",  "text": "default"},
+		    {"tag": "protocol", "value": "ProtCryoSparc3DClassification",  "text": "default"},
 		    {"tag": "protocol", "value": "ProtCryoSparcLocalCtfRefinement",   "text": "default"},
 		    {"tag": "protocol", "value": "ProtCryoSparcGlobalCtfRefinement",  "text": "default"},
 			{"tag": "section", "text": "more", "openItem": "False", "children": [
